--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
     "bootstrap4-toggle": "^3.6.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.3.0",
     "react-bootstrap-toggle": "^2.3.2",
     "react-dom": "^16.13.0",
+    "react-icons": "^3.10.0",
     "react-scripts": "3.4.0",
     "react-wireframe": "^0.1.1",
     "reactjs-popup": "^1.5.0"
