--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@y0c/react-datepicker": "^1.0.3",
     "bootstrap": "^4.5.2",
     "bootstrap4-toggle": "^3.6.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-toggle": "^2.3.2",
